<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string
		name="empty_string"></string>
	<string
		name="app_name">iBook</string>
	<string
		name="listview1">EPUB图书阅读</string>
	<string
		name="listview2">PDF文档阅读</string>
	<string
		name="listview3">文本与网页阅读</string>
	<string
		name="listview4">多媒体播放</string>
	<string
		name="listview5">关于我们</string>
	<string
		name="openfile">打开文件</string>
	<string
		name="opennet">网络播放</string>
	<string
		name="playlist">播放列表</string>
	<string
		name="recent">最近播放</string>
	<string
		name="warn">警告</string>
	<string
		name="sure">确定</string>
	<string
		name="cancel">取消</string>
	<string
		name="confirm_exit">确定返回主界面吗？</string>
	<string
		name="dirname_app_name">CoolReader！</string>
	<string
		name="menu_new_folder">新文件夹</string>
	<string
		name="dirnameinput_cmd_return">保存</string>
	<string
		name="dirnameinput_hint">输入文件夹名称：</string>
	<string
		name="up_one_level">返回上级..</string>
	<string
		name="mybackground">自定义背景</string>
	<string
		name="selectfontsize">请选择文字大小</string>
	<string
		name="selectfontcolor">请选择文字颜色</string>
	<string
		name="viewfont">文字预览</string>
	<string
		name="bookmarklist">书签列表：</string>
	<string
		name="current_dir">.</string>
	<string
		name="setting">设置</string>
	<string
		name="changefont">字体</string>
	<string
		name="book_toc_cate">目录</string>
	<string
		name="changebg">设置背景</string>
	<string
		name="circumgyrate">旋转</string>
	<string
		name="savebookmark">增加书签</string>
	<string
		name="bookmarkfavo">收藏书签</string>
	<string
		name="deletebookmark">删除书签</string>
	<string
		name="viewbookmark">浏览书签</string>
	<string
		name="inputbmname">请输入书签的名称：</string>
	<string
		name="saveresult">保存结果</string>
	<string
		name="savesuccess">保存书签成功！</string>
	<string
		name="savefail">很抱歉，保存书签失败，请重试！</string>
	<string
		name="deleteresult">删除结果</string>
	<string
		name="deletesuccess">恭喜您，删除书签成功！</string>
	<string
		name="deletefail">很抱歉，删除书签失败，请重试！</string>
	<string
		name="suredelete">确认删除</string>
	<string
		name="deletefile">删除此文件吗？</string>
	<string
		name="exit">退出</string>
	<string
		name="back">后退</string>
	<string
		name="gomark">跳转</string>
	<string
		name="delete">删除</string>
	<string
		name="changecolor">设置文字颜色</string>
	<string
		name="changefontsize">设置文字大小</string>
	<string
		name="about">关于...</string>
	<string
		name="htmlbrowser">网页浏览 - CoolReader！</string>
	<string
		name="aboutcoolreader">CoolReader</string>
	<string
		name="ourintroduce">BEYONGD软件开发组</string>
	<string
		name="filenotfound">文件无法读取！请返回...</string>
	<string
		name="html">text/html</string>

	<drawable
		name="bkcolor2">#ffffff</drawable>
	<drawable
		name="bkcolor1">#000000</drawable>

	<string
		name="menu_bookmark">书签</string>
	<string
		name="menu_fontsize">字体大小</string>
	<string
		name="menu_autoread">自动阅读</string>
	<string
		name="menu_search">搜索</string>
	<string
		name="menu_bright">亮度调节</string>
	<string
		name="menu_changebg">更换背景</string>
	<string
		name="menu_rotate">旋转屏幕</string>
	<string
		name="menu_setting">设置</string>
	<string
		name="coisnull">Co文件不存在</string>
	<string
		name="roisnull">Ro文件不存在</string>
	<string
		name="readfile">读取文件</string>
	<string
		name="loadingfile">正在加载文件中，请稍候·····</string>
	<string
		name="gotopage">页面跳转</string>
	<string
		name="bookmarkdelete">提示：长按选中的书签以删除单条书签。</string>
	<string
		name="progress">进度</string>
	<string
		name="stop">停止</string>
	<string
		name="auto"> 自动 </string>
	<string
		name="frontpage"> 封面 </string>
	<string
		name="quick_navi"> 快速导航 </string>
	<string
		name="auto_read_fast">快</string>
	<string
		name="auto_read_slow">慢</string>
	<string
		name="audio_name">
		歌曲名
	</string>
	<string
		name="audio_album">
		歌曲专辑
	</string>
	<string
		name="audio_author">
		艺术家
	</string>
	<string
		name="player_type_error">
		您所播的视频格式不正确，播放已停止
	</string>
	<string
		name="noprevsong">
		没有上一首歌
	</string>
	<string
		name="nonextsong">
		没有下一首歌
	</string>
	<string
		name="unsupportformat">
		抱歉，微吧暂时不支持这种格式的读取。
	</string>

</resources>