<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:padding="10dip"
	android:layout_width="fill_parent" android:layout_height="wrap_content">

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="20px" 
		android:text="@string/selectfontsize" />

	<Spinner android:id="@+id/fontsizespinner" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:drawSelectorOnTop="true"
		android:prompt="@string/selectfontsize" />

	<TextView android:layout_width="fill_parent"
		android:textSize="20px" 
		android:layout_height="wrap_content" 
		android:text="@string/selectfontcolor" />

	<Spinner android:id="@+id/fontcolorspinner" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:drawSelectorOnTop="true"
		android:prompt="@string/selectfontsize" />

<TextView android:layout_width="fill_parent" android:id="@+id/viewfont"
		android:layout_height="wrap_content" android:text="@string/viewfont"
		 />
<TextView android:layout_width="fill_parent" android:id="@+id/viewfont"
		android:layout_height="wrap_content" 
		 />
	<Button android:id="@+id/gotoreader" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/sure"></Button>
</LinearLayout>
