<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/LinearLayout01"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<ListView android:id="@+id/bookmarklistview" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1.0"></ListView>
	<TableLayout android:id="@+id/TableLayout01"
		android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<Button android:id="@+id/deletebm" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/delete"></Button>
			</TableRow>
			<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<Button android:id="@+id/skipbm" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/gomark"></Button>
			</TableRow>
			<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<Button android:id="@+id/cancelbm" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/cancel"></Button>
			</TableRow>
	</TableLayout>
</LinearLayout>
